--- a/temolates.html
+++ b/temolates.html
@@ -5,10 +5,10 @@
     </style>
 </head>
 <body style="width: 900px">
-<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 5px;background-color: lightgoldenrodyellow;height: 700px">
-    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 4em;">DIPLOMA CERTIFICATE - AUXILIARY NURSE & MIDWIFE / H.W. (FEMALE)</div>
+<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 5px;background-color: #ADD8E6;height: 700px">
+    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 2em;">DIPLOMA CERTIFICATE - AUXILIARY NURSE & MIDWIFE / H.W. (FEMALE)</div>
     <table width="100%"><tr>
-        <td valign="bottom"><img style="float:left;padding-left: 2em;" src="{{qrCode}}" alt="qr_code"/>
+        <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
     </td><td>
     <div class="line">
         <div>This is to certify that</div>
