--- a/temolates.html
+++ b/temolates.html
@@ -5,8 +5,8 @@
     </style>
 </head>
 <body style="width: 900px">
-<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 3px;background-color: #ADD8E6;height: 700px">
-    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE - AUXILIARY NURSE & MIDWIFE / H.W. (FEMALE)</div>
+<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 3px;background-color: lightBlue;height: 700px">
+    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE</div>
     <table width="100%"><tr>
         <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
     </td><td>
