--- a/temp2.html
+++ b/temp2.html
@@ -1,12 +1,14 @@
 <html lang="en">
 <head>
     <style>
-        .line{text-align:center;font-family: 'Imperial Script';font-size: 1em;}
+        .line{text-align:center;font-family: 'Imperial Script';font-size: 3em;}
     </style>
 </head>
 <body style="width: 900px">
-<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 3px;background-color: lightBlue;height: 700px">
-    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE</div>
+<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 3px;background-color: lightBlue;height: 600px">
+    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 2em;">DIPLOMA CERTIFICATE-AUXILIARY NURSE &
+MIDWIFE / H.W.
+(FEMALE)</div>
     <table width="100%"><tr>
         <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
     </td><td>
