--- a/temp2.html
+++ b/temp2.html
@@ -6,15 +6,14 @@
 </head>
 <body style="width: 900px">
 <div style="margin: 1em;border: 2px solid darkgoldenrod;border-radius: 2px;background-color: lightBlue;height: 600px">
-    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE-AUXILIARY NURSE &
-MIDWIFE / H.W.
-(FEMALE)</div>
+    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE</div>
     <table width="80%"><tr>
         <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
     </td><td>
     <div class="line">
         <div>This is to certify that</div>
-        <div><b>{{credentialSubject.name}}</b></div>
+        <div>{{credentialSubject.name}}</div>
+        <div>{{credentialSubject.trainingTitle}}</div>
         <div>has successfully completed training requirements for</div>
         <div style="padding: 1em;font-family: 'Open Sans', sans-serif">{{credentialSubject.trainedOn}} </div>
         <div>and is awarded this certificate on </div>
