--- a/temolates.html
+++ b/temolates.html
@@ -1,11 +1,11 @@
 <html lang="en">
 <head>
     <style>
-        .line{text-align:center;font-family: 'Imperial Script';font-size: 1em;}
+        .line{text-align:center;font-family: 'Canterbury' ;font-size: 1em;}
     </style>
 </head>
-<body style="width: 900px">
-<div style="margin: 1em;border: 3px solid darkgoldenrod;border-radius: 3px;background-color: lightBlue;height: 700px">
+<body style="width: 700px">
+<div style="margin: 1em;border: 1px solid darkgoldenrod;border-radius: 3px;background-color: #ADD8E6;height: 600px">
     <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE</div>
     <table width="100%"><tr>
         <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
@@ -14,7 +14,7 @@
         <div>This is to certify that</div>
         <div><b>{{credentialSubject.name}}</b></div>
         <div>has successfully completed training requirements for</div>
-        <div style="padding: 1em;font-family: 'Open Sans', sans-serif">{{credentialSubject.trainedOn}} </div>
+        <div style="padding: 1em;font-family: 'Canterbury' ">{{credentialSubject.trainedOn}} </div>
         <div>and is awarded this certificate on </div>
         <div>{{dateFormat proof.created "dddd, MMMM Do YYYY"}}</div>
 
