--- a/temolates.html
+++ b/temolates.html
@@ -1,15 +1,17 @@
 <html lang="en">
 <head>
     <style>
-        .line{text-align:center;font-family: 'Canterbury' ;font-size: 1em;}
+        .line{text-align:center;font-family: 'Canterbury' ;font-size: 2em;}
     </style>
 </head>
 <body style="width: 700px">
 <div style="margin: 1em;border: 1px solid darkgoldenrod;border-radius: 3px;background-color: #ADD8E6;height: 600px">
-    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 1em;">DIPLOMA CERTIFICATE</div>
-    <table width="100%"><tr>
-        <td valign="bottom"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
-    </td><td>
+    <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 3em;">DIPLOMA CERTIFICATE</div>
+    <table>
+        <tr>
+        <td valign="bottom" width="50%"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
+    </td>
+    <td width="50%">
     <div class="line">
         <div>This is to certify that</div>
         <div><b>{{credentialSubject.name}}</b></div>
