--- a/temolates.html
+++ b/temolates.html
@@ -9,7 +9,7 @@
     <div style="padding:1em;text-align:center;font-family: Canterbury;font-size: 3em;">DIPLOMA CERTIFICATE</div>
     <table>
         <tr>
-        <td valign="bottom" width="50%"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
+        <td valign="bottom" style="width: 80px"><img style="float:left;padding-left: 1em;" src="{{qrCode}}" alt="qr_code"/>
     </td>
     <td width="50%">
     <div class="line">
