--- a/studentId.html
+++ b/studentId.html
@@ -56,7 +56,7 @@
                 <div class="footer">
                     <div class="scan">
                         
-                        <img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/scan.svg" alt="scanner">
+                        <img src="{{qrCode}}" alt="scanner">
                         <p class="m-0 mt-5 ft-8 alpha-5">Scan me</p>
                         
                     </div>
