--- a/studentId.html
+++ b/studentId.html
@@ -16,7 +16,7 @@
             <div class="left-strip"></div>
             <div class="id-details">
                 <div class="header">
-                    <div class="logo"><img src="https://drive.google.com/file/d/10mcyUNFtwYUbL8Pa_oWOzd5wekDkdMyr/view?usp=sharing" alt="UPSMF and Niramaya logo"></div>
+                    <div class="logo"><img src="{{credentialSubject.orgLogo}}" alt="UPSMF and Niramaya logo"></div>
                 </div> 
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
