--- a/studentId.html
+++ b/studentId.html
@@ -32,7 +32,7 @@
                          <div class="idDetailsDes dob">
                             <p class="title">Date of birth</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.dob}}</p>
+                            <p class="result">{{credentialSubject.trainedOn}}</p>
                          </div>
                          <div class="idDetailsDes gender">
                             <p class="title">Gender</p>
@@ -47,7 +47,7 @@
                          <div class="idDetailsDes rollNo">
                             <p class="title">Roll number</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.rollNo}}</p>
+                            <p class="result">{{credentialSubject.rollNumber}}</p>
                          </div>
                     </div>
 
