--- a/studentId.html
+++ b/studentId.html
@@ -32,22 +32,22 @@
                          <div class="idDetailsDes dob">
                             <p class="title">Date of birth</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.trainedOn}}</p>
+                            <p class="result">{{dob}}</p>
                          </div>
                          <div class="idDetailsDes gender">
                             <p class="title">Gender</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.sex}}</p>
+                            <p class="result">{{sex}}</p>
                          </div>
                          <div class="idDetailsDes course">
                             <p class="title">Qualification</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.course}}</p>
+                            <p class="result">{{course}}</p>
                          </div>
                          <div class="idDetailsDes rollNo">
                             <p class="title">Roll number</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.rollNumber}}</p>
+                            <p class="result">{{rollNumber}}</p>
                          </div>
                     </div>
 
