--- a/studentId.html
+++ b/studentId.html
@@ -32,12 +32,12 @@
                          <div class="idDetailsDes dob">
                             <p class="title">Date of birth</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.trainedOn}}</p>
+                            <p class="result">{{credentialSubject.dob}}</p>
                          </div>
                          <div class="idDetailsDes gender">
                             <p class="title">Gender</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.gender}}</p>
+                            <p class="result">{{credentialSubject.sex}}</p>
                          </div>
                          <div class="idDetailsDes course">
                             <p class="title">Qualification</p>
