--- a/studentId.html
+++ b/studentId.html
@@ -21,7 +21,7 @@
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
                     <div class="profile">
-                        <img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/user_1@2x.png" alt="student photo">
+                        <img src="{{credentialSubject.candidatePics}}" alt="student photo">
                     </div>
                     <div class="idDetails">
                          <div class="idDetailsDes name">
@@ -37,7 +37,7 @@
                          <div class="idDetailsDes gender">
                             <p class="title">Gender</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.sex}}</p>
+                            <p class="result">{{credentialSubject.gender}}</p>
                          </div>
                          <div class="idDetailsDes course">
                             <p class="title">Qualification</p>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="caseby">
                         
-                        <img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/caseby.svg" alt="signature">
+                        <img src="{{credentialSubject.casaLogo}}" alt="signature">
                         <p class="m-0 mt-5 ft-8 alpha-5 text-right">Verified </p>
                         
                     </div>
