--- a/studentId.html
+++ b/studentId.html
@@ -42,7 +42,7 @@
                          <div class="idDetailsDes course">
                             <p class="title">Qualification</p>
                             <p class="sep">:</p>
-                            <p class="result">{{credentialSubject.trainingTitle}}</p>
+                            <p class="result">{{credentialSubject.trainedOn}}</p>
                          </div>
                          <div class="idDetailsDes rollNo">
                             <p class="title">Roll number</p>
