--- a/studentId.html
+++ b/studentId.html
@@ -16,12 +16,12 @@
             <div class="left-strip"></div>
             <div class="id-details">
                 <div class="header">
-                    <div class="logo"><img src="https://drive.google.com/file/d/10mcyUNFtwYUbL8Pa_oWOzd5wekDkdMyr/view?usp=sharing" alt="UPSMF and Niramaya logo"></div>
+                    <div class="logo"><img src="/home/img/user.png" alt="UPSMF and Niramaya logo"></div>
                 </div> 
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
                     <div class="profile">
-                        <img src="{{credentialSubject.candidatePics}}" alt="student photo">
+                        <img src="/home/img/user.png" alt="student photo">
                     </div>
                     <div class="idDetails">
                          <div class="idDetailsDes name">
