--- a/studentId.html
+++ b/studentId.html
@@ -16,7 +16,7 @@
             <div class="left-strip"></div>
             <div class="id-details">
                  <div class="header">
-                    <div class="logo"><img src="http://127.0.0.1:9000/img/upsmfLogo.svg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=TWBS2QU54DI2BP3BEXH0%2F20230515%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230515T062909Z&X-Amz-Expires=604800&X-Amz-Security-Token=eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NLZXkiOiJUV0JTMlFVNTRESTJCUDNCRVhIMCIsImV4cCI6MTY4NDE2Nzc5MiwicGFyZW50IjoiYWRtaW4ifQ.IEM9_9Xrk3C8saTH2djoiKCGyb8X_ccbV0PwLYf4ueoJ4mY0bCkp3P9a0qnrah1dTtw1FwK_6f-mE38Hq01Lyg&X-Amz-SignedHeaders=host&versionId=null&X-Amz-Signature=3383633c70313a3a7a98dd3571d4a5a98e41adfde7497bd4a16d57888d0d8c67" alt="UPSMF and Niramaya logo"></div>
+                    <div class="logo"><img src="{{credentialSubject.orgLogo}}" alt="UPSMF and Niramaya logo"></div>
                 </div> 
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
