--- a/studentId.html
+++ b/studentId.html
@@ -55,7 +55,7 @@
                 <div class="footer">
                     <div class="scan">
                         
-                        <img src="{{qrCode}}" alt="scanner">
+                        <img src="data:image/png;base64,{{qrCode}}" alt="scanner">
                         <p class="m-0 mt-5 ft-8 alpha-5">Scan me</p>
                         
                     </div>
