--- a/studentId.html
+++ b/studentId.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="caseby">
                         
-                        <img src="{{credentialSubject.casaLogo}}" alt="signature">
+                        <img style="float:left;padding-left: 2em; src="{{credentialSubject.casaLogo}}" alt="signature">
                         <p class="m-0 mt-5 ft-8 alpha-5 text-right">Verified </p>
                         
                     </div>
