--- a/studentId.html
+++ b/studentId.html
@@ -58,7 +58,7 @@
                         
                     </div>
                     <div class="caseby">
-                        <img style="float:left;padding-left: 2em; src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/casa.PNG" alt="signature">
+                        <img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/casa.PNG" alt="signature">
                         <p class="m-0 mt-5 ft-8 alpha-5 text-right">Verified </p>
                         
                     </div>
