--- a/studentId.html
+++ b/studentId.html
@@ -19,7 +19,7 @@
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
                      <div class="profile">
-                        <img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/user.png" alt="student photo">
+                        <img src="https://casa.upsmfac.org/UploadedFiles/Student/2022/E2210254300051.jpg" alt="student photo">
                     </div>
                     <div class="idDetails">
                          <div class="idDetailsDes name">
