--- a/studentId.html
+++ b/studentId.html
@@ -14,12 +14,12 @@
             <div class="left-strip"></div>
             <div class="id-details">
                  <div class="header">
-                    <div class="logo"><img src="{{credentialSubject.orgLogo}}" alt="UPSMF and Niramaya logo"></div>
+                    <div class="logo"><img src="http://127.0.0.1:9000/img/casaby.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=CYSW53YHHKTLA0MKWM45%2F20230517%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230517T073540Z&X-Amz-Expires=604800&X-Amz-Security-Token=eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NLZXkiOiJDWVNXNTNZSEhLVExBME1LV000NSIsImV4cCI6MTY4NDM1MTY0MiwicGFyZW50IjoiYWRtaW4ifQ.my8Wuyo9NHyLrbYa9cJ5CD1GQnQ0VRwZv2m6537yJC87EewktSpufEdAJnJuHyeD_NJqzyfsgiyEfR1w48-pIw&X-Amz-SignedHeaders=host&versionId=null&X-Amz-Signature=46a4ddb7cc803a268a0dfa51de6792fd8bb90927c2d45ab2a10c1f4b4e70943f" alt="UPSMF and Niramaya logo"></div>
                 </div> 
                 <div class="midSection">
                     <h1 class="instituteTitle">Central Institute of Higher  Studies (CIHTS)</h1>
                      <div class="profile">
-                        <img src="https://casa.upsmfac.org/UploadedFiles/Student/2022/E2210254300051.jpg" alt="student photo">
+                        <img src="{{credentialSubject.orgLogo}}" alt="student photo">
                     </div>
                     <div class="idDetails">
                          <div class="idDetailsDes name">
