--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -60,7 +60,7 @@
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.examYear}}-{{credentialSubject.examYear}}</p>
+                                <p class="result">{{credentialSubject.examMonth}}-{{credentialSubject.examYear}}</p>
                             </div>
                             <div class="subject place">
                                 <p class="title">Place</p>
