--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -55,7 +55,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainningCenter}{[credentialSubject.trainningCenterCode}]}   </p>
+                                <p class="result">{{credentialSubject.trainningCenter}} [{{credentialSubject.trainningCenterCode}}]  </p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
