--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="org-section text-center primary-color">
                                 <span class="d-block">Secretary U.P. State Medical Faculty Lucknow</span>
-<!--                                 <span class="barcode d-block"><img src="{{barCode}}" alt="bar code"></span> -->
+                                 <span class="barcode d-block">"{{credentialSubject.barCode}}"</span> 
                                 <div>{{barCode}}</div>
                             </div>
                             <div class="law">
