--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="org-section text-center primary-color">
                                 <span class="d-block">Secretary U.P. State Medical Faculty Lucknow</span>
-                                 <span class="barcode d-block">"{{credentialSubject.barCode}}"</span> 
+                                 <span class="barcode d-block">"<img src="{{credentialSubject.barCode}}" alt="scanner"></span> 
                                 <div>{{barCode}}</div>
                             </div>
                             <div class="law">
