--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -88,7 +88,7 @@
                             </div>
                             <div>
                                 <span class="d-block">Secretary U.P. State Medical Faculty Lucknow</span>
-                                 <span><img src='{{credentialSubject.barCode}}'></span> 
+                                 <span><img src="{{credentialSubject.barCode}}"></span> 
                                 <div>{{barCode}}</div>
                             </div>
                             <div class="law">
