--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -86,10 +86,10 @@
                                 <div class="scanner"><img src="{{qrCode}}" alt="scanner"></div>
     
                             </div>
-                            <div>
+                            <div class="org-section text-center primary-color">
                                 <span class="d-block">Secretary U.P. State Medical Faculty Lucknow</span>
-                                 <span><img src="{{{credentialSubject.barCode}}}"></span> 
-                                <div>{{barCode}}</div>
+                                 <span class="barcode d-block"><img src="{{{credentialSubject.barCode}}}"></span> 
+                               
                             </div>
                             <div class="law">
                                 <p class="act">Empowered Under INDIAN MEDICAL DEGREE ACT 1916</p>
