--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -86,7 +86,7 @@
                                 <div class="scanner"><img src="{{qrCode}}" alt="scanner"></div>
     
                             </div>
-                            <div class="org-section text-center primary-color">
+                            <div>
                                 <span class="d-block">Secretary U.P. State Medical Faculty Lucknow</span>
                                  <span><img src="{{{credentialSubject.barCode}}}"></span> 
                                
