--- a/studentIdwebcopy.html
+++ b/studentIdwebcopy.html
@@ -16,7 +16,7 @@
     <div class="container">
         
         <div class="id-card">
-            <div class="watermark"><img src="img/watermark.png" alt="web copy certificate"></div>
+            <div class="watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/watermark.png" alt="web copy certificate"></div>
             <div class="left-strip"></div>
             <div class="id-details">
                 <div class="header">
