--- a/nursingANM.html
+++ b/nursingANM.html
@@ -185,7 +185,7 @@
                                             <th scope="col">TOTAL</th>
                                             
                                           </tr>
-                                          {{credentialSubject.compositeDate}}
+                                          {{credentialSubject.compositeData}}
                                           <!--tr>
                                             <td scope="col">I</td>
                                             <td scope="col" class="t-left" >MIDWIFERY (T) </td>
