--- a/jsontable.html
+++ b/jsontable.html
@@ -17,8 +17,7 @@
 
     <script>
         // JSON data
-    var jsonData2 = [{"name":"COMMUNITY HEALTH NURSING","max-ext":"75","max-int":"25","obt-ext":"46","obt-int":"20"},
-    {"name":"HEALTH PROMOTION","max-ext":"75","max-int":"25","obt-ext":"40","obt-int":"19"},{"name":"HEALTH PROMOTION","max-ext":"75","max-int":"25","obt-ext":"40","obt-int":"19"},{"name":"HEALTH PROMOTION","max-ext":"75","max-int":"25","obt-ext":"40","obt-int":"19"}];
+    var jsonData2 ={{credentialSubject.compositeData}};
 
         // Get the table header row
         var headerRow = document.getElementById("headerRow");
