--- a/nursingANM.html
+++ b/nursingANM.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="marksDetails">
                       <script>
-                          const yearsOfTheCourse = {{credentialSubject.compositeData}};
+                          const yearsOfTheCourse = {{{credentialSubject.compositeData}}};
                           function convertToRoman(num) {
                             var roman = {
                               M: 1000,
