--- a/nursingANM.html
+++ b/nursingANM.html
@@ -31,7 +31,7 @@
                           <div class="subject number">
                               <p class="title">Roll No.</p>
                               <p class="sep">:</p>
-                              <p class="result">{{{credentialSubject.rollNumber}}}</p>
+                              <p class="result">{{{credentialSubject.compositeData}}}</p>
                           </div>
                           <div class="subject name">
                               <p class="title">Name of Student</p>
