--- a/nursingANM.html
+++ b/nursingANM.html
@@ -54,7 +54,7 @@
                           </div>
     
                     </div>
-                    <div class="marksDetails">
+                    <div class="marksDetails">{{{credentialSubject.compositeData1}}}
                       <script>
                           function convertToRoman(num) {
                             var roman = {
