--- a/nursingANM.html
+++ b/nursingANM.html
@@ -54,7 +54,7 @@
                           </div>
     
                     </div>
-                    <div class="marksDetails">{{{credentialSubject.compositeData}}}</div>
+                    <div v-html="content">{{{credentialSubject.compositeData}}}</div>
           <footer class="mt-16">
 
             <div class="f-division">
