--- a/nursingANM.html
+++ b/nursingANM.html
@@ -54,10 +54,11 @@
     
                     </div>
                     <div class="marksDetails" id="h1">
-                            <script>
+                            <h6><script>
                                var tag_id = document.getElementById('h1');
                                var newNode = document.createElement('p');
                                newNode.appendChild(document.createTextNode({{{credentialSubject.compositeData}}}));
+                            </h6>
                               </script>
                     <table><tr><td>{{{credentialSubject.compositeData}}}</td></tr></table>
                     </div>
