--- a/nursingANM.html
+++ b/nursingANM.html
@@ -54,13 +54,7 @@
     
                     </div>
                     <div class="marksDetails" id="h1">
-                            <h6><script>
-                               var tag_id = document.getElementById('h1');
-                               var newNode = document.createElement('p');
-                               newNode.appendChild(document.createTextNode({{{credentialSubject.compositeData}}}));
-                            </h6>
-                              </script>
-                    <table><tr><td>{{{credentialSubject.compositeData}}}</td></tr></table>
+                    {{{credentialSubject.compositeData}}}
                     </div>
           <footer class="mt-16">
 
