--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -82,7 +82,7 @@
                         <hr>
                         <div class="f-division">
                             <div class="profile-scan">
-                                <div class="studentID"><img src="{{credentialSubject.orgLogo}}" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.candidatePics}}" alt="student ID Photo"></div>
                                 <div class="scanner"><img src="{{qrCode}}" alt="scanner"></div>
     
                             </div>
