--- a/enrollment-certificate.html
+++ b/enrollment-certificate.html
@@ -40,12 +40,12 @@
                             <div class="subject motherName">
                                 <p class="title">Mother's Name</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.mother}}</p>
+                                <p class="result">{{credentialSubject.mothersName}}</p>
                             </div>
                             <div class="subject fatherName">
                                 <p class="title">Father's Name</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.father}}</p>
+                                <p class="result">{{credentialSubject.fathersName}}</p>
                             </div>
                             <div class="subject address">
                                 <p class="title">Address</p>
