--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -59,7 +59,7 @@
                     	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bg-upmf.png" alt="upsmf logo images"></div>
                     	 <div class="s-division">
                             <div class="row">
-                                    <p class="title1">Ref. No : {{credentialSubject.trainningCenterCode}}</p>
+                                    <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
                                 <p class="title2">{{credentialSubject.dated}}</p>
@@ -78,7 +78,7 @@
                             </div>
                             <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
-                                <p class="c-block">This is certified that <b><u>{{credentialSubject.name}} D/o {{credentialSubject.mothersName}},</u></b> has qualified B.Sc Nursing and She is registered as B.Sc Nurse. She has been registered in this council as per details givem below:-</p>
+                                <p class="c-block">This is certified that <b><u>{{credentialSubject.name}} D/o {{credentialSubject.fathersName}},</u></b> has qualified B.Sc Nursing and She is registered as B.Sc Nurse. She has been registered in this council as per details givem below:-</p>
                             </div>
                             <h4 class="title1"><u>{{credentialSubject.courseName}}</u></h4>
 
