--- a/registration-certificate-nursing.html
+++ b/registration-certificate-nursing.html
@@ -87,7 +87,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainningCenter}</p>
+                                <p class="result">{{credentialSubject.trainningCenter}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Training Period</p>
