--- a/BABY-D.html
+++ b/BABY-D.html
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="profile-scan">
-                                <div class="studentID"><img src="" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.orgLogo}}" alt="student ID Photo"></div>
                             </div>
                             <div class="org-section text-center primary-color">
                                 <div class="sign">
