--- a/MSC-r.html
+++ b/MSC-r.html
@@ -85,7 +85,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject name">
                                 <p class="title">Period</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.joiningMonth}}</p>
+                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
                             </div>                            
                             </div>
                             <h6 class="texts2" > U.P. Nurses & Midwives Council has the right to cancel the certificate, if any information is found to be incorrect or fake.
