--- a/MSC-r.html
+++ b/MSC-r.html
@@ -80,7 +80,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject name">
                                 <p class="title">University</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.name}}</p>
+                                <p class="result">{{credentialSubject.collegeAddress}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Period</p>
