--- a/MSC-r.html
+++ b/MSC-r.html
@@ -55,7 +55,7 @@
                         <h4 class="cer-type">{{credentialSubject.trainingTitle}}</h4>
                         <div class="s-division">
                             <div class="row">
-                                    <p class="title1">{{credentialSubject.trainningCenterCode}}</p>
+                                    <p class="title1">{{credentialSubject.trainingCenterCode}}</p>
                             </div>
                             <div class="row">
                                 <p class="title2">{{credentialSubject.rollNumber}}</p>
@@ -75,7 +75,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject number">
                                 <p class="title">Training Center.</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainningCenter}}</p>
+                                <p class="result">{{credentialSubject.trainingCenter}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">University</p>
