--- a/MSC-r.html
+++ b/MSC-r.html
@@ -110,7 +110,7 @@ As per present rules, this certificate is having lifetime validity.</6>
 
                             </div>
                             <div class="profile-scan">
-                                <div class="studentID"><img src="{{credentialSubject.orgLogo}}" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
                             </div>
                             <div class="org-section text-center primary-color">
 
