--- a/BABY-D.html
+++ b/BABY-D.html
@@ -48,7 +48,7 @@
                 <header>
 					<div class="s-division">
 						<div class="row">
-								<p class="title1">{{credentialSubject.trainningCenterCode}}</p>
+								<p class="title1">{{credentialSubject.trainingCenterCode}}</p>
 						</div>
 						<div class="row">
 							<p class="title2">{{credentialSubject.rollNumber}}</p>
@@ -65,8 +65,8 @@
                         <div class="en-details">
                             <div class="annot">
                                 <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
-                                    D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mother}} & {{credentialSubject.father}}</font style></u> has passed the examination of
-                                    <font style="font-weight: 1000;">{{credentialSubject.trainingTitle}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainningCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
+                                    D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</font style></u> has passed the examination of
+                                    <font style="font-weight: 1000;">{{credentialSubject.trainingTitle}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
                             <p > Signed on behalf of the Governing Body of the U.P. State Medical Faculty</p>
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="profile-scan">
-                                <div class="studentID"><img src="{{credentialSubject.orgLogo}}" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
                             </div>
                             <div class="org-section text-center primary-color">
                                 <div class="sign">
